# Kafka-Lite

./: .gitignore  CMakeLists.txt  README.md  design.md
cpp/: CMakeLists.txt  Dockerfile
cpp/ci/: Dockerfile
cpp/include/: AppendQueue.h  BrokerClient.h  BrokerCore.h  BrokerCoreIfc.h  BrokerServer.h  ByteSwap.h  FakeBrokerCore.h  Log.h  RecordManager.h  RecordProducer.h  Segment.h  TcpProtocol.h
cpp/src/: AppendQueue.cpp  BrokerClient.cpp  BrokerCore.cpp  BrokerServer.cpp  FakeBrokerCore.cpp  Log.cpp  RecordManager.cpp  RecordProducer.cpp  Segment.cpp  TcpProtocol.cpp  main.cpp
cpp/tests/: BrokerCoreTests.cpp  BrokerServerTests.cpp  StorageEngineTests.cpp  TcpProtocolTests.cpp
include/: AppendQueue.h  BrokerCore.h  BrokerServer.h  Log.h  Segment.h
rust/: Cargo.toml
rust/crates/common/src/: lib.rs
rust/crates/consumer/: Cargo.toml
rust/crates/producer/: Cargo.toml
rust/crates/producer/src/: lib.rs
rust/crates/producer/src/producer/: error.rs
rust/crates/protocol/: Cargo.toml
rust/crates/protocol/src/: lib.rs
src/: AppendQueue.cpp  BrokerCore.cpp  BrokerServer.cpp  Log.cpp  Segment.cpp  main.cpp
tests/: BrokerServerTests.cpp  TestSuite.cpp
